2011-11-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): hashp and maphash functions registered.

	* hash.c (maphash): New function.

	* hash.h (maphash): Declared.

2011-11-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_vars): Bugfix: was not handling vars
	of the form var, only (var initform).

2011-11-29  Kaz Kylheku  <kaz@kylheku.com>

	Support assignment to (car ...) and (cdr ...).

	* eval.c (car_s, cdr_s): New symbol variables.
	(op_modplace): Cases for car and cdr added.
	(expand_place): Likewise. Calls abort should the
	cases fall through rather than returning 42.
	(expand): Bugfix: for and for* case not propagating
	source location info. Bugfix: expansion for do added.
	(eval_init): car_s and cdr_s initialized and used
	in place of previous intern calls.

	* parser.y (elem): Removed wrong logic for expanding the
	do form. It was expanding only the first argument.

2011-11-28  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (let_star_s, for_s, for_star_s): New symbols.
	(env_replace_vbind, bindings_helper): New static functions.
	(op_let): Refactored to allow for let* form. Code for setting
	up bindings moved into bindings helper, shared by for loop.
	(op_for, expand_vars): New static functions.
	(expand): Bugfix: let case was neglecting to walk the var
	initialization forms. This is done via expand_vars now.
	let_star_s added to this case to handle let* and let at
	the same time. New case added for for and for*.
	(eval_init): let_star_s, for_s, and for_star_s initialized,
	and entered into op_table.

2011-11-28  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): More functions.

	* txr.vim: More highlighting.

2011-11-28  Kaz Kylheku  <kaz@kylheku.com>

	Adding streams functions to Lisp evaluator.

	* eval.c (op_let): Bugfix: was not evaluating var init forms.
	(reg_var): New static function.
	(eval_init): Registered numerous stream functions and the
	three standard streams.

	* lib.c (obj_print, obj_pprint): Modified to return a value.